@@ -24,23 +24,17 @@
 
 
 ctlSQLResult::ctlSQLResult(wxWindow *parent, pgConn *_conn, wxWindowID id, const wxPoint& pos, const wxSize& size)
-#if USE_LISTVIEW
-: wxListView(parent, id, pos, size, wxLC_VIRTUAL | wxLC_REPORT | wxSUNKEN_BORDER)
-#else
 : ctlSQLGrid(parent, id, pos, size)
-#endif
 {
     conn=_conn;
     thread=0;
 
-#if !USE_LISTVIEW
     SetTable(new sqlResultTable(), true);
 
     EnableEditing(false);
     SetSizer(new wxBoxSizer(wxVERTICAL));
 
     Connect(wxID_ANY, wxEVT_GRID_RANGE_SELECT, wxGridRangeSelectEventHandler(ctlSQLResult::OnGridSelect));
-#endif
 }
 
 
@@ -68,56 +62,6 @@ bool ctlSQLResult::Export()
     return false;
 }
 
-#if USE_LISTVIEW
-void ctlSQLResult::SelectAll()
-{
-	for (int i = 0; i < GetItemCount(); i++)
-		Select(i);
-}
-
-
-wxString ctlSQLResult::GetExportLine(int row)
-{
-   if (GetColumnCount() <= 1)
-        return OnGetItemText(row, 1);
-
-    wxString str;
-    int col;
-    for (col=1 ; col < GetColumnCount() ; col++)
-    {
-        if (col > 1)
-            str.Append(settings->GetCopyColSeparator());
-
-        wxString text=OnGetItemText(row, col);
-
-		bool needQuote  = false;
-		if (settings->GetCopyQuoting() == 1)
-		{
-			/* Quote strings only */
-			switch (colTypClasses.Item(col))
-			{
-			case PGTYPCLASS_NUMERIC:
-			case PGTYPCLASS_BOOL:
-				break;
-			default:
-				needQuote=true;
-				break;
-			}
-		}
-		else if (settings->GetCopyQuoting() == 2)
-			/* Quote everything */
-			needQuote = true;
-
-		if (needQuote)
-            str.Append(settings->GetCopyQuoteChar());
-        str.Append(text);
-        if (needQuote)
-            str.Append(settings->GetCopyQuoteChar());
-    }    
-    return str;
-}
-#endif
-
 bool ctlSQLResult::IsColText(int col)
 {
 	switch (colTypClasses.Item(col))
@@ -136,9 +80,6 @@ int ctlSQLResult::Execute(const wxString &query, int resultToRetrieve)
     colSizes.Empty();
     colHeaders.Empty();
 
-#if USE_LISTVIEW
-    ClearAll();
-#else
     wxGridTableMessage *msg;
     sqlResultTable *table = (sqlResultTable *)GetTable();
     msg = new wxGridTableMessage(table, wxGRIDTABLE_NOTIFY_ROWS_DELETED, 0, GetNumberRows());
@@ -147,7 +88,6 @@ int ctlSQLResult::Execute(const wxString &query, int resultToRetrieve)
     msg = new wxGridTableMessage(table, wxGRIDTABLE_NOTIFY_COLS_DELETED, 0, GetNumberCols());
     ProcessTableMessage(*msg);
     delete msg;
-#endif
 
     Abort();
 
@@ -163,9 +103,8 @@ int ctlSQLResult::Execute(const wxString &query, int resultToRetrieve)
         return -1;
     }
 
-#if !USE_LISTVIEW
     ((sqlResultTable *)GetTable())->SetThread(thread);
-#endif
+
     thread->Run();
     return RunStatus();
 }
@@ -175,9 +114,8 @@ int ctlSQLResult::Abort()
 {
     if (thread)
     {
-#if !USE_LISTVIEW
         ((sqlResultTable *)GetTable())->SetThread(0);
-#endif
+
         thread->Delete();
         delete thread;
     }
@@ -198,9 +136,6 @@ void ctlSQLResult::DisplayData(bool single)
 	rowcountSuppressed = single;
     Freeze();
 
-#if USE_LISTVIEW
-    SetItemCount(NumRows());
-#else
     /*
      * Resize and repopulate by informing itto delete all the rows and
      * columns, then append the correct number of them. Probably is a
@@ -220,7 +155,6 @@ void ctlSQLResult::DisplayData(bool single)
     msg = new wxGridTableMessage(table, wxGRIDTABLE_NOTIFY_COLS_APPENDED, thread->DataSet()->NumCols());
     ProcessTableMessage(*msg);
     delete msg;
-#endif
 
 	if (single)
     {
@@ -233,27 +167,13 @@ void ctlSQLResult::DisplayData(bool single)
         colNames.Add(thread->DataSet()->ColName(0));
         colTypes.Add(wxT(""));
         colTypClasses.Add(0L);
-#if USE_LISTVIEW
-        InsertColumn(0, thread->DataSet()->ColName(0), wxLIST_FORMAT_LEFT, w);
-#else
+
         SetColSize(0, w);
-#endif
     }
 	else
     {
         wxString colName, colType;
-#if USE_LISTVIEW
-        colTypes.Add(wxT(""));
-        colTypClasses.Add(0L);
 
-		wxString rowname=_("Row");
-    	size_t rowcolsize=NumToStr(NumRows()).Length();
-	    if (rowname.Length() > rowcolsize)
-			rowcolsize = rowname.Length();
-
-        InsertColumn(0, rowname, wxLIST_FORMAT_RIGHT, rowcolsize*8);
-        colNames.Add(wxT("Row"));
-#endif
         size_t hdrIndex=0;
 		long col, nCols=thread->DataSet()->NumCols();
 
@@ -265,11 +185,8 @@ void ctlSQLResult::DisplayData(bool single)
             colTypes.Add(colType);
             colTypClasses.Add(thread->DataSet()->ColTypClass(col));
 
-#if USE_LISTVIEW
-            wxString colHeader = colName;
-#else
             wxString colHeader = colName + wxT("\n") + colType;
-#endif
+
             int w;
             if (hdrIndex < colHeaders.GetCount() && colHeaders.Item(hdrIndex) == colHeader) {
                 w = colSizes.Item(hdrIndex++);
@@ -285,11 +202,7 @@ void ctlSQLResult::DisplayData(bool single)
                     w=-1;
             }
 
-#if USE_LISTVIEW
-            InsertColumn(col+1, colHeader, wxLIST_FORMAT_LEFT, w);
-#else
             SetColSize(col, w);
-#endif
         }
     }
     Thaw();
@@ -373,14 +286,11 @@ wxString ctlSQLResult::OnGetItemText(long item, long col) const
 	return wxEmptyString;
 }
 
-#if !USE_LISTVIEW
 void ctlSQLResult::OnGridSelect(wxGridRangeSelectEvent& event)
 {
     SetFocus();
 }
-#endif
 
-#if !USE_LISTVIEW
 wxString sqlResultTable::GetValue(int row, int col)
 {
     if (thread && thread->DataValid())
@@ -424,4 +334,3 @@ int sqlResultTable::GetNumberCols()
     return 0;
 }
 
-#endif
