@@ -837,29 +837,6 @@ void frmQuery::OnCopy(wxCommandEvent& ev)
         msgHistory->Copy();
     else if (wnd == scratchPad)
         scratchPad->Copy();
-#if USE_LISTVIEW
-    else if (wnd == sqlResult && sqlResult->GetSelectedItemCount() > 0)
-    {
-        wxString str;
-        int row=-1;
-        while (true)
-        {
-            row = sqlResult->GetNextItem(row, wxLIST_NEXT_ALL, wxLIST_STATE_SELECTED);
-            if (row < 0)
-                break;
-            
-            str.Append(sqlResult->GetExportLine(row));
-            if (sqlResult->GetSelectedItemCount() > 1)
-                str.Append(END_OF_LINE);
-        }
-
-        if (wxTheClipboard->Open())
-        {
-            wxTheClipboard->SetData(new wxTextDataObject(str));
-            wxTheClipboard->Close();
-        }
-    }
-#else
     else 
     {
         wxWindow *obj = wnd;
@@ -872,7 +849,6 @@ void frmQuery::OnCopy(wxCommandEvent& ev)
             obj = obj->GetParent();
         }
     }
-#endif
     updateMenu();
 }
 
@@ -1270,11 +1246,8 @@ void frmQuery::OnQuickReport(wxCommandEvent& event)
     rep->XmlAddSectionTableFromGrid(section, sqlResult);
 
     wxString stats;
-#if USE_LISTVIEW
-    stats.Printf(wxT("%d rows with %d columns retrieved."), sqlResult->NumRows(), sqlResult->GetColumnCount() - 1);
-#else
     stats.Printf(wxT("%d rows with %d columns retrieved."), sqlResult->NumRows(), sqlResult->GetNumberCols());
-#endif
+
     rep->XmlSetSectionTableInfo(section, stats);
 
     wxString query=sqlQuery->GetSelectedText();
