@@ -12,34 +12,16 @@
 #ifndef CTLSQLRESULT_H
 #define CTLSQLRESULT_H
 
-//////////////////////////////////////////////////////////////////////////
-// Set this define to use a wxListView control instead of a wxGrid
-// This will disable some features such as advanced cell selection and
-// copying, but the wxListView is a better designed control
-//////////////////////////////////////////////////////////////////////////
-#define USE_LISTVIEW 0
-//////////////////////////////////////////////////////////////////////////
-
 // wxWindows headers
 #include <wx/thread.h>
 
 #include "db/pgSet.h"
 #include "db/pgConn.h"
-#if USE_LISTVIEW
-#include <wx/listctrl.h>
-#else
 #include "ctlSQLGrid.h"
-#endif
-
-
 
 #define CTLSQL_RUNNING 100  // must be greater than ExecStatusType PGRES_xxx values
 
-#if USE_LISTVIEW
-class ctlSQLResult : public wxListView
-#else
 class ctlSQLResult : public ctlSQLGrid
-#endif
 {
 public:
     ctlSQLResult(wxWindow *parent, pgConn *conn, wxWindowID id, const wxPoint& pos=wxDefaultPosition, const wxSize& size=wxDefaultSize);
@@ -70,14 +52,9 @@ public:
 
     bool GetRowCountSuppressed() { return rowcountSuppressed; };
 
-#if USE_LISTVIEW
-	void SelectAll();
-	wxString GetExportLine(int row);
-#else
     void SetMaxRows(int rows);
     void ResultsFinished();
     void OnGridSelect(wxGridRangeSelectEvent& event);
-#endif
 
     wxArrayString colNames;
     wxArrayString colTypes;
@@ -92,7 +69,6 @@ private:
 	bool rowcountSuppressed;
 };
 
-#if !USE_LISTVIEW
 class sqlResultTable : public wxGridTableBase
 {
 public:
@@ -110,6 +86,5 @@ public:
 private:
     pgQueryThread *thread;
 };
-#endif
 
 #endif
