@@ -35,6 +35,8 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2006-12-28 DP  1.8.0  Refactor code to remove support for building the Query
+                      Tool with a listview rather than a grid.
 2006-12-28 DP  1.6.2  Avoid displaying multi line data in single line list 
                       controls, per Clodoaldo Pinto Neto
 2006-12-15 DP  1.6.2  Properly drop foreign keys in schemas whose names require
